--- a/dbmonitor/templates/dbmonitor/index2.html
+++ b/dbmonitor/templates/dbmonitor/index2.html
@@ -464,42 +464,19 @@
 									<table class="table table-hover ">
 										<thead>
 											<tr>
-												<th>Device</th>
-												<th>Visits</th>
-												<th>Avg. time</th>
+												<th>Consulta</th>
+												<th>Data</th>
+												<th>Total</th>
 											</tr>
 										</thead>
 										<tbody>
+                                        {% for history in history_list %}
 											<tr>
-												<td>Unknown</td>
-												<td>2,456</td>
-												<td>00:02:36</td>
+												<td>{{ history.query }}</td>
+												<td>{{ history.created_date }}</td>
+												<td>{{ history.total }}</td>
 											</tr>
-											<tr>
-												<td>Apple iPad</td>
-												<td>1,006</td>
-												<td>00:03:41</td>
-											</tr>
-											<tr>
-												<td>Apple iPhone</td>
-												<td>68</td>
-												<td>00:04:10</td>
-											</tr>
-											<tr>
-												<td>HTC Desire</td>
-												<td>38</td>
-												<td>00:01:40</td>
-											</tr>
-											<tr>
-												<td>Samsung</td>
-												<td>20</td>
-												<td>00:04:54</td>
-											</tr>
-											<tr>
-												<td>Apple iPad</td>
-												<td>1,006</td>
-												<td>00:03:41</td>
-											</tr>
+                                        {% endfor %}
 										</tbody>
 									</table>
 								</div>
